Opened 8 years ago
Closed 8 years ago
#13199 closed bug (fixed)
Could not open <program name here> (Missing symbol: _ZN7BStringixEi).
Reported by: | Duggan | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Kits/Support Kit | Version: | R1/Development |
Keywords: | Cc: | jessicah | |
Blocked By: | Blocking: | ||
Platform: | x86-64 |
Description
I just built and booted x86_64 hrev50861 and get the above error when trying to launch various applications (Vision and Paladin for example).
Change History (4)
comment:1 by , 8 years ago
comment:3 by , 8 years ago
Binary compatibility technically only matters for the gcc2 build since it's the only one that can run legacy software
Note:
See TracTickets
for help on using tickets.
This (BString::operator[](int)) was removed in hrev50860. Applications need to be rebuilt if they were using it.